Increased width of task list to stop it wrapping tasks

--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ html {
 .task-list {
 	list-style: none;
 	margin: 5% auto;
-	max-width: 500px;
+	max-width: 700px;
 }
 
 .task {
